MULTISITE-2328 Fix overlap of subscription box

--- a/sites/all/themes/ec_resp/css/less/feature-notifications.less
+++ b/sites/all/themes/ec_resp/css/less/feature-notifications.less
@@ -1,4 +1,4 @@
 /* ---------------- Notifications  ----------------- */
-#subscribe label {
-	display: inline;
+#subscribe {
+  min-height: 40px;
 }
